# mlibc

./: meson.build
abis/linux/: route.h  wait.h
options/ansi/generic/: file-io.cpp  signal.cpp  stdio.cpp  time.cpp
options/ansi/include/: math.h
options/ansi/include/mlibc/: ansi-sysdeps.hpp  file-io.hpp
options/bsd/: meson.build
options/bsd/generic/: arpa-nameser.cpp  ether.cpp
options/bsd/include/netinet/: ether.h
options/elf/include/: elf.h
options/glibc/generic/: resolv.cpp
options/glibc/include/: resolv.h
options/internal/gcc/: guard-abi.cpp  stack_protector.cpp
options/internal/generic/: ensure.cpp  global-config.cpp  locale.cpp  stdlib.cpp  threads.cpp  time.cpp
options/internal/include/bits/: ensure.h  types.h
options/internal/include/mlibc/: global-config.hpp  internal-sysdeps.hpp  lock.hpp  tcb.hpp  tid.hpp
options/linux/generic/: fcntl.cpp  ifaddrs.cpp  malloc.cpp  sched.cpp  sys-prctl.cpp  sys-uio.cpp
options/posix/: meson.build
options/posix/generic/: dirent.cpp  fcntl.cpp  lookup.cpp  posix_stdlib.cpp  pthread.cpp  sched.cpp  semaphore.cpp  spawn.cpp  sys-mman.cpp  sys-resource.cpp  sys-stat.cpp  sys-uio.cpp  sys-utsname.cpp  unistd.cpp  utmpx.cpp
options/posix/include/: dirent.h  fcntl.h  pthread.h
options/rtld/generic/: linker.cpp  main.cpp
options/rtld/x86_64/: entry.S  runtime.S
sysdeps/unified/: meson.build
sysdeps/unified/generic/: entry.cpp  filesystem.cpp  generic.cpp  posix-syscall.cpp  pty.cpp  signals.cpp  sockets.cpp  thread.cpp  unified.cpp
sysdeps/unified/x86_64/: thread.cpp  thread_entry.S
(+27 files in other folders)
